# datawise-decisions

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pytest.yml
notebooks/: notebook.ipynb
src/datawise_decisions/: __init__.py  __main__.py  seer.py
tests/: __init__.py  test_seer.py
